# ryuko-ng

./: Dockerfile  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: formatting.yml
robocop_ng/: __init__.py  __main__.py  config_template.py
robocop_ng/cogs/: admin.py  basic.py  basic_reswitched.py  err.py  imagemanip.py  invites.py  links.py  lists.py  lockdown.py  logfilereader.py  logs.py  macro.py  meme.py  mod.py  mod_note.py  mod_reacts.py  mod_reswitched.py  mod_timed.py  mod_userlog.py  mod_watch.py  pin.py  remind.py  robocronp.py  role_persistence.py  ryujinx_reactionroles.py  ryujinx_verification.py  sar.py  vanity_url.py  verification.py  yubicootp.py
robocop_ng/helpers/: checks.py  disabled_ids.py  disabled_paths.py  disabled_tids.py  errcodes.py  macros.py  restrictions.py  robocronp.py  roles.py  ryujinx_log_analyser.py  userlogs.py
